# UnstructuredMeshAnalyzer

./: .gitignore  AUTHOR  FileWrapper.cxx  GMGW_FileWrapper.hxx  GMGW_TAUFileWrapper.hxx  GMGW_UGridFileWrapper.hxx  GMGW_VTKFileWrapper.hxx  GMGW_geom_utils.hxx  GMGW_sort.hxx  GMGW_unstr.hxx  Makefile.in  Mesh-Readers.txt  README  TAUFileWrapper.cxx  UGridFileWrapper.cxx  VTKFileWrapper.cxx  aclocal.m4  analyzeVolMesh.cxx  config.h.in  configure  configure.ac  faceSorting.cxx  geom_utils.cxx  surface_proj.cxx
gnuplot-scripts/: Quad-HeHe.gnu  Quad-PrHe.gnu  Quad-PrPr.gnu  Quad-PyHe.gnu  Quad-PyPr.gnu  Quad-PyPy.gnu  Tri-PrPr.gnu  Tri-PyPr.gnu  Tri-PyPy.gnu  Tri-TePr.gnu  Tri-TePy.gnu  Tri-TeTe.gnu  distort.gnu  mesh-sizes.gnu  quad-edge-angle.gnu  quad-quad-dihed.gnu  quad-tri-dihed.gnu  surf-conform.gnu  tri-edge-angle.gnu  tri-tri-dihed.gnu  wall-normal.gnu
python-scripts/: flaps-special.py  flaps.py  nose-special.py  nose.py  tail-special.py  tail.py  wing-root-special.py  wing-root.py  wing-tip-special.py  wing-tip.py
